Fix some alignment problems

--- a/src/components/base/HistoryButton/style.scss
+++ b/src/components/base/HistoryButton/style.scss
@@ -22,6 +22,7 @@ and (max-width: 1149px) {
 @media only screen and (min-width: 1150px) {
   #history-button {
     padding-bottom: 2px;
+    padding-right: 10px;
   }
   
   #h-image {
