--- a/src/components/base/ValueRow/style.scss
+++ b/src/components/base/ValueRow/style.scss
@@ -61,6 +61,7 @@
     justify-content: end;
     width: 90px;
     font-size: 18px;
+    margin: 0;
   }
 
   .icons {
