--- a/src/components/simple/Core/TopBar/style.scss
+++ b/src/components/simple/Core/TopBar/style.scss
@@ -77,7 +77,7 @@ and (max-width: 1149px) {
     position: absolute;
     display: flex;
     justify-content: space-between;
-    width: 86.5vw;
+    width: 86.2vw;
     height: 6.5vh;
     z-index: 1;
     padding-top: 25px;
