--- a/src/components/simple/RightSide/Forecast/style.scss
+++ b/src/components/simple/RightSide/Forecast/style.scss
@@ -128,6 +128,6 @@ and (max-width: 1149px) {
     align-items: center;
     justify-content: space-between;
     width: 40vw;
-    height: 8vh;
+    height: 6vh;
   }
 }
